dev/manifests/voltran/account-ui/service.yaml
---
# Source: app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-ui
  labels:
    app.kubernetes.io/name: account-ui
    app.kubernetes.io/family: dnext
    helm.sh/chart: app-0.9.1
    app.kubernetes.io/instance: account-ui
    app.kubernetes.io/managed-by: Helm
  annotations:
    pia-team.com/app: account-ui
    pia-team.com/app-logo: web
    pia-team.com/app-title: Account UI
    pia-team.com/family: dnext
    slug: account-ui
    pia-team.com/role: pia.k8s.apps/0.35.0/orbitant/account-ui
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: account-ui
    app.kubernetes.io/instance: account-ui
